# CMake_C-

./: .gitignore  CMakeLists.txt  README.txt  build.py  main.cpp  main.cpp.orig
Communication/: communication.cpp  communication.h  communication.hpp  i2c_module.cpp  i2c_module.hpp  spi_module.cpp  spi_module.hpp  spi_module.hpp.orig  spi_module.hpp.orig.orig  uart_module.cpp  uart_module.hpp
JSON/: json.cpp  json.h  json.hpp
JSON/pattern/: template.json
database/: dbHandler.cpp  dbHandler.h
device/: device.cpp  device.h
displays/: display.cpp  display.hpp
hdr/: device.hpp  device.hpp.orig  device.hpp.orig.orig  i2c_module.hpp  parameters.hpp  spi_module.hpp  test.hpp
mainApp/: mainApp.cpp  mainApp.h
main_Init/: main_Init.cpp  main_Init.cpp.orig  main_Init.hpp  main_Init.hpp.orig
pwm/: pwm.cpp  pwm.hpp
src/: device.cpp  device.cpp.orig  device.cpp.orig.orig  test.cpp
tools/: raspberry_sysroot
tools/pythonScripts/: dirhandling.py
tools/rsyslog/: logrotate.conf  rsyslog.conf
util/: parameters.h
